--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,10 +36,10 @@ bind-key '%' split-window -h -c '#{pane_current_path}'
 bind-key 'c' new-window -c '#{pane_current_path}'
 
 # Use HJKL to move between panes
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind -r -T prefix h select-pane -L
+bind -r -T prefix j select-pane -D
+bind -r -T prefix k select-pane -U
+bind -r -T prefix l select-pane -R
 
 # Export session output to file
 bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
