--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 
 # Use colored terminal
@@ -26,6 +27,10 @@ if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
  "bind -T copy-mode-vi 'v' send-keys -X begin-selection; \
   bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'"
+# Tmux == 2.9a (Mac)
+if-shell -b '[ "$TMUX_VERSION == 2.9a" ]' \
+  "bind -T copy-mode-vi 'v' send-keys -X begin-selection; \
+   bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'pbcopy'"
 
 # Override default bindings
 unbind '"'
@@ -53,6 +58,7 @@ bind-key -r -T prefix       C-j           resize-pane -D
 bind-key -r -T prefix       C-h           resize-pane -L
 bind-key -r -T prefix       C-l           resize-pane -R
 
+set-option -g default-shell /bin/zsh
 
 # TPM Plugins
 # Install TPM with `git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm`
@@ -64,3 +70,18 @@ set -g @plugin 'tmux-plugins/tmux-open'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
+
+
+####################
+# Windows bar
+####################
+# Set net speed format
+# set -g @net_speed_format " %8s  %8s"
+# Update interval
+set -g status-interval 1
+# Status bar colors
+set -g status-fg colour240
+set -g status-bg colour233
+# Window status
+set -g window-status-format "  #I#F | #W  "
+set -g window-status-current-format "#[fg=colour233,bg=colour31] | #[fg=colour255,bg=colour31] #I#F | #W #[fg=colour31,bg=colour233,nobold] |"
