--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,13 +75,14 @@ run -b '~/.tmux/plugins/tpm/tpm'
 ####################
 # Windows bar
 ####################
-# Set net speed format
-# set -g @net_speed_format " %8s  %8s"
-# Update interval
-set -g status-interval 1
-# Status bar colors
-set -g status-fg colour240
-set -g status-bg colour233
-# Window status
-set -g window-status-format "  #I#F | #W  "
-set -g window-status-current-format "#[fg=colour233,bg=colour31] | #[fg=colour255,bg=colour31] #I#F | #W #[fg=colour31,bg=colour233,nobold] |"
+set-window-option -g window-status-separator ''
+set-option -g status-justify 
+set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #S '
+set-option -g status-left-length 16
+set-option -g status-bg colour237
+set-option -g status-right '#[bg=colour235]#[fg=colour185] %a %R #[bg=colour236]#[fg=colour3] #[bg=colour237] #[bg=colour72] #[]'
+set-option -g status-interval 60
+set-option -g pane-active-border-style fg=colour246
+set-option -g pane-border-style fg=colour238
+set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I  #W  '
+set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I  #W  '
