fix(tmux, coc): remove Mac adaptations

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,18 +19,9 @@ bind-key C-a send-prefix
 # Copy mode overrides
 #unbind ']'
 bind-key V copy-mode
-# Tmux < 2.4
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
- "bind-key -t vi-copy 'v' begin-selection; \
-  bind-key -t vi-copy 'y' copy-pipe 'xclip -in -selection clipboard'"
-# Tmux >= 2.4
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
- "bind -T copy-mode-vi 'v' send-keys -X begin-selection; \
-  bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'"
-# Tmux == 2.9a (Mac)
-if-shell -b '[ "$TMUX_VERSION == 2.9a" ]' \
-  "bind -T copy-mode-vi 'v' send-keys -X begin-selection; \
-   bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'pbcopy'"
+
+bind -T copy-mode-vi 'v' send-keys -X begin-selection
+bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Override default bindings
 unbind '"'
