--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,9 +1,11 @@
 {
   "languageserver": {
     "terraform": {
-      "command": "terraform-lsp",
-      "filetypes": ["terraform"],
-      "initializationOptions": {}
+      "command": "terraform-ls",
+      "args": ["serve"],
+      "filetypes": ["terraform", "tf"],
+      "initializationOptions": {},
+      "settings": {}
     },
     "golang": {
       "command": "gopls",
@@ -31,10 +33,7 @@
       "initializationOptions": {
 	  "cache": {
 	      "directory": "/tmp/ccls"
-	  } //,
-	  //"clang": {
-	  //  "resourceDir": "/Library/Developer/CommandLineTools/usr/lib/clang/12.0.0"
-          //}
+	  }
       }
     }
   },
@@ -42,7 +41,5 @@
     "http://json.schemastore.org/ansible-stable-2.7": "*/ansible-*/**.yaml",
     "Kubernetes": "*/cluster-config-*/**.yaml"
   },
-  "java.home": "/Library/Java/JavaVirtualMachines/jdk-13.0.1.jdk/Contents/Home",
-  "java.jdt.ls.vmargs": "-Dlog.level=ALL -javaagent:/Users/fllaca/.m2/repository/org/projectlombok/lombok/1.18.0/lombok-1.18.0.jar -Xbootclasspath/a:/Users/fllaca/.m2/repository/org/projectlombok/lombok/1.18.0/lombok-1.18.0.jar",
   "java.trace.server":"verbose"
 }
